# ecom-v2

./: .env  README.md  pyproject.toml  requirements.txt
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/coupons/: admin.py  forms.py  models.py  views.py
apps/coupons/migrations/: 0001_initial.py
apps/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_remove_orderitem_order_delete_order_delete_orderitem.py  0003_initial.py  0004_order_braintree_id.py  0005_order_coupon_order_discount.py
apps/payment/: admin.py  tasks.py  views.py
apps/shop/: models.py  recommender.py  views.py
apps/shop/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
templates/cart/: detail.html
templates/orders/order/: create.html  created.html  detail.html  pdf.html
templates/payment/: canceled.html  done.html  process.html
templates/shop/: base.html
templates/shop/product/: detail.html  list.html
